--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/ForgotPasswordPage.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/ForgotPasswordPage.razor.scss
@@ -2,21 +2,12 @@
 @import '../../../Styles/abstracts/_media-queries.scss';
 
 .page-container {
-    display: flex;
     width: 100%;
     height: 100%;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column nowrap;
-    padding: rem2(56px) rem2(16px);
-
-    @include lg {
-        padding: rem2(48px) rem2(16px);
-    }
-
-    @include sm {
-        padding: rem2(40px) rem2(16px);
-    }
 }
 
 .form-description {
