--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Styles/app.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Styles/app.scss
@@ -14,9 +14,7 @@
         -webkit-user-select: none;
         user-select: none;
     }
-}
 
-.bit-blazor-hybrid {
     &.bit-windows * {
         -webkit-user-drag: none;
     }
